{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 64,
  "lineage": "ad3fc136-44c2-ad17-6c0c-f9bf480f1bc8",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "details",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-00793d8c5d91d3382",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:294277043425:subnet/subnet-00793d8c5d91d3382",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 4088,
            "cidr_block": "172.31.80.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00793d8c5d91d3382",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "294277043425",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0d35c3426445fd4e7"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "subnet-0128a65db570e232b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:294277043425:subnet/subnet-0128a65db570e232b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "available_ip_address_count": 4087,
            "cidr_block": "172.31.64.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0128a65db570e232b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "294277043425",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0d35c3426445fd4e7"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "subnet-06f17070096b56c36",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:294277043425:subnet/subnet-06f17070096b56c36",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.48.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f17070096b56c36",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "294277043425",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0d35c3426445fd4e7"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "subnet-08a0f5a61e5145a72",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:294277043425:subnet/subnet-08a0f5a61e5145a72",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08a0f5a61e5145a72",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "294277043425",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0d35c3426445fd4e7"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "subnet-08f23e428000ab0df",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:294277043425:subnet/subnet-08f23e428000ab0df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "available_ip_address_count": 4090,
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f23e428000ab0df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "294277043425",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0d35c3426445fd4e7"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "subnet-0a88b315702d732d7",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:294277043425:subnet/subnet-0a88b315702d732d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a88b315702d732d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "294277043425",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0d35c3426445fd4e7"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:294277043425:vpc/vpc-0d35c3426445fd4e7",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0ce44b2e5f2bd4b66",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-06ebdbb14cf373c6b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d35c3426445fd4e7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d98a1df7436876e3",
            "owner_id": "294277043425"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:294277043425:loadbalancer/app/video-processor-alb/6e19d777870e8191",
            "arn_suffix": "app/video-processor-alb/6e19d777870e8191",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "video-processor-alb-560790586.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:294277043425:loadbalancer/app/video-processor-alb/6e19d777870e8191",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "video-processor-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0474c53890f1b6502"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00793d8c5d91d3382"
              },
              {
                "subnet_id": "subnet-0128a65db570e232b"
              }
            ],
            "subnets": [
              "subnet-00793d8c5d91d3382",
              "subnet-0128a65db570e232b"
            ],
            "tags": {
              "Project": "video-processor"
            },
            "tags_all": {
              "Project": "video-processor"
            },
            "vpc_id": "vpc-0d35c3426445fd4e7",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "data.aws_subnet.details",
            "data.aws_subnets.all",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:294277043425:listener/app/video-processor-alb/6e19d777870e8191/97d9f764b423da3a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Acesso Direto Negado. Use o API Gateway.",
                    "status_code": "403"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:294277043425:listener/app/video-processor-alb/6e19d777870e8191/97d9f764b423da3a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:294277043425:loadbalancer/app/video-processor-alb/6e19d777870e8191",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.app_alb",
            "aws_security_group.alb_sg",
            "data.aws_subnet.details",
            "data.aws_subnets.all",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "allow_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:294277043425:targetgroup/video-processor-tg/bf10d4b4d56f312e",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:294277043425:listener-rule/app/video-processor-alb/6e19d777870e8191/97d9f764b423da3a/6cf58d1b6a1e17ba",
            "condition": [
              {
                "host_header": [],
                "http_header": [
                  {
                    "http_header_name": "x-apigateway-token",
                    "values": [
                      "tech-challenge-hackathon"
                    ]
                  }
                ],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:294277043425:listener-rule/app/video-processor-alb/6e19d777870e8191/97d9f764b423da3a/6cf58d1b6a1e17ba",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:294277043425:listener/app/video-processor-alb/6e19d777870e8191/97d9f764b423da3a",
            "priority": 100,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.app_alb",
            "aws_lb_listener.http",
            "aws_lb_target_group.app_tg",
            "aws_security_group.alb_sg",
            "data.aws_subnet.details",
            "data.aws_subnets.all",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:294277043425:targetgroup/video-processor-tg/bf10d4b4d56f312e",
            "arn_suffix": "targetgroup/video-processor-tg/bf10d4b4d56f312e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:294277043425:targetgroup/video-processor-tg/bf10d4b4d56f312e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "video-processor-tg",
            "port": 30008,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d35c3426445fd4e7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:294277043425:security-group/sg-0474c53890f1b6502",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0474c53890f1b6502",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "video-processor-alb-sg",
            "name_prefix": "",
            "owner_id": "294277043425",
            "revoke_rules_on_delete": false,
            "tags": {
              "Project": "video-processor"
            },
            "tags_all": {
              "Project": "video-processor"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d35c3426445fd4e7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:294277043425:security-group/sg-05b5be6c486b2382b",
            "description": "Security group for EKS cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05b5be6c486b2382b",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow ALB to access NodePort",
                "from_port": 30008,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0474c53890f1b6502"
                ],
                "self": false,
                "to_port": 30008
              }
            ],
            "name": "video-processor-cluster-sg",
            "name_prefix": "",
            "owner_id": "294277043425",
            "revoke_rules_on_delete": false,
            "tags": {
              "Project": "video-processor"
            },
            "tags_all": {
              "Project": "video-processor"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d35c3426445fd4e7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "video-processor",
            "metadata": [
              {
                "generation": 0,
                "name": "video-processor",
                "resource_version": "1223",
                "uid": "18c3a7dd-3464-45b5-a042-747a057e5b28"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "video-processor"
          },
          "dependencies": [
            "aws_eks_cluster.main",
            "aws_eks_node_group.main",
            "aws_security_group.alb_sg",
            "aws_security_group.eks_cluster",
            "data.aws_caller_identity.current",
            "data.aws_eks_cluster_auth.cluster_auth",
            "data.aws_subnet.details",
            "data.aws_subnets.all",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "video-processor/video-processor",
            "metadata": [
              {
                "generation": 0,
                "name": "video-processor",
                "namespace": "video-processor",
                "resource_version": "1363",
                "uid": "20d98e1c-480c-4b04-8273-9f7420a272bc"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.100.4.13",
                "cluster_ips": [
                  "10.100.4.13"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 30008,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "8000"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "video-processor"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Service",
            "name": "video-processor",
            "namespace": "video-processor"
          },
          "dependencies": [
            "aws_eks_cluster.main",
            "aws_eks_node_group.main",
            "aws_security_group.alb_sg",
            "aws_security_group.eks_cluster",
            "data.aws_caller_identity.current",
            "data.aws_eks_cluster_auth.cluster_auth",
            "data.aws_subnet.details",
            "data.aws_subnets.all",
            "data.aws_vpc.default",
            "kubernetes_config_map.app_config",
            "kubernetes_deployment.app",
            "kubernetes_namespace.app",
            "kubernetes_secret.aws_credentials"
          ]
        }
      ]
    }
  ]
}